prevent lnebreak on title

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -61,7 +61,6 @@
   position: absolute;
   bottom: 0;
   color: whitesmoke;
-  max-width: 475px;
   background-color: black;
   padding: 20px;
   border: 6px solid $hollywood-cerise;
@@ -142,6 +141,10 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     width: 100%;
+  }
+
+  .FeatureDetails {
+    max-width: calc(50vw - 40px);
   }
 }
 
